# NSUlab

./: .gitignore
Big_Int/: .gitignore  Bigint.cpp  Bigint.h  CMakeLists.txt  TestBigInt.cpp  main.cpp
lab2_Prisoners_Dilemma/: CMakeLists.txt
lab2_Prisoners_Dilemma/lib/game/: CMakeLists.txt
lab2_Prisoners_Dilemma/lib/game-modes/: CMakeLists.txt
lab2_Prisoners_Dilemma/lib/game-modes/include/: DetailedGame.h  FastGame.h  Game.h  IGameMode.h  TournamentGame.h
lab2_Prisoners_Dilemma/lib/game-modes/src/: DetailedGame.cpp  FastGame.cpp  Game.cpp  TournamentGame.cpp
lab2_Prisoners_Dilemma/lib/game/include/: GameHub.h
lab2_Prisoners_Dilemma/lib/game/src/: GameHub.cpp
lab2_Prisoners_Dilemma/lib/matrix-field/: CMakeLists.txt
lab2_Prisoners_Dilemma/lib/matrix-field/include/: IMatrix.h  MoveMatrix.h  PlayingField.h  ResultMatrix.h
lab2_Prisoners_Dilemma/lib/matrix-field/src/: MoveMatrix.cpp  PlayingField.cpp  ResultMatrix.cpp
lab2_Prisoners_Dilemma/lib/strategies/: CMakeLists.txt
lab2_Prisoners_Dilemma/lib/strategies/include/: AlternatingStrategy.h  AlwaysBetrayerStrategy.h  IStrategy.h  MetaStrategy.h  PersonStrategy.h  PlayerChoice.h  RandomStrategy.h  SmartStrategy.h  StrategyFactory.h
lab2_Prisoners_Dilemma/lib/strategies/src/: AlternatingStrategy.cpp  AlwaysBetrayerStrategy.cpp  MetaStrategy.cpp  PersonStrategy.cpp  RandomStrategy.cpp  SmartStrategy.cpp  StrategyFactory.cpp
lab2_Prisoners_Dilemma/src/: main.cpp
lab3-SoundProcessor/: CMakeLists.txt
lab3-SoundProcessor/WAVfiles/configuration/: config1.txt
lab3-SoundProcessor/lib/ConfigParser/: CMakeLists.txt
lab3-SoundProcessor/lib/ConfigParser/include/: ConfigParser.hpp  ConfigParserExceptions.hpp  ConvertersConfigParsers.hpp
lab3-SoundProcessor/lib/ConfigParser/src/: ConfigParser.cpp  ConfigParserExceptions.cpp  ConvertersConfigParsers.cpp
lab3-SoundProcessor/lib/Converter/: CMakeLists.txt
lab3-SoundProcessor/lib/Converter/include/: ConverterCreator.hpp  ConverterException.hpp  DoubleMixConverter.hpp  IConverter.hpp  MixConverter.hpp  MuteConverter.hpp
lab3-SoundProcessor/lib/Converter/src/: ConverterCreator.cpp  ConverterExceptions.cpp  DoubleMixConverter.cpp  MixConverter.cpp  MuteConverter.cpp
lab3-SoundProcessor/lib/SoundProcessor/: CMakeLists.txt
lab3-SoundProcessor/lib/SoundProcessor/include/: SoundProcessor.hpp  SoundProcessorExceptions.hpp
lab3-SoundProcessor/lib/WAV/: CMakeLists.txt
lab3-SoundProcessor/src/: main.cpp
(+14 files in other folders)
